transform calc URLs to OOXML format, related tdf#91334

Change-Id: I497a6600e155200e913ed386a539f284a5c86320