sc/source/filter/xcl97/xcl97esc.cxx
@@ -206,7 +206,7 @@ EscherExHostAppData* XclEscherEx::StartShape( const Reference< XShape >& rxShape
     //added for exporting OCX control
     sal_Int16 nMsCtlType = 0;
     if ( !pObj )
-        pCurrXclObj = new XclObjAny( mrObjMgr, rxShape );  // just what is it?!?
+        pCurrXclObj = new XclObjAny( mrObjMgr, rxShape, GetDocPtr() );  // just what is it?!?
     else
     {
         pCurrXclObj = NULL;
@@ -231,10 +231,10 @@ EscherExHostAppData* XclEscherEx::StartShape( const Reference< XShape >& rxShape
                         pCurrXclObj = new XclObjOle( mrObjMgr, *pObj );
                 }
                 else    // just a metafile
-                    pCurrXclObj = new XclObjAny( mrObjMgr, rxShape );
+                    pCurrXclObj = new XclObjAny( mrObjMgr, rxShape, GetDocPtr() );
             }
             else
-                pCurrXclObj = new XclObjAny( mrObjMgr, rxShape );
+                pCurrXclObj = new XclObjAny( mrObjMgr, rxShape, GetDocPtr() );
         }
         else if( nObjType == OBJ_UNO )
         {
@@ -255,13 +255,13 @@ EscherExHostAppData* XclEscherEx::StartShape( const Reference< XShape >& rxShape
             else  //TBX Form Control
                 pCurrXclObj = CreateTBXCtrlObj( rxShape, pChildAnchor );
             if( !pCurrXclObj )
-                pCurrXclObj = new XclObjAny( mrObjMgr, rxShape );   // just a metafile
+                pCurrXclObj = new XclObjAny( mrObjMgr, rxShape, GetDocPtr() );   // just a metafile
         }
         else if( !ScDrawLayer::IsNoteCaption( pObj ) )
         {
             // ignore permanent note shapes
             // #i12190# do not ignore callouts (do not filter by object type ID)
-            pCurrXclObj = ShapeInteractionHelper::CreateShapeObj( mrObjMgr, rxShape );
+            pCurrXclObj = ShapeInteractionHelper::CreateShapeObj( mrObjMgr, rxShape, GetDocPtr() );
             ShapeInteractionHelper::PopulateShapeInteractionInfo( mrObjMgr, rxShape, *pCurrAppData );
         }
     }
@@ -542,9 +542,9 @@ void XclEscherClientTextbox::WriteData( EscherEx& /*rEx*/ ) const
 }
 
 XclExpShapeObj*
-ShapeInteractionHelper::CreateShapeObj( XclExpObjectManager& rObjMgr, const Reference< XShape >& xShape )
+ShapeInteractionHelper::CreateShapeObj( XclExpObjectManager& rObjMgr, const Reference< XShape >& xShape, ScDocument* pDoc )
 {
-    return new XclExpShapeObj( rObjMgr, xShape );
+    return new XclExpShapeObj( rObjMgr, xShape, pDoc );
 }
 
 void
